@@ -3,7 +3,9 @@ package it.pagopa.pn.delivery.middleware.notificationdao;
 import it.pagopa.pn.commons.abstractions.IdConflictException;
 import it.pagopa.pn.commons.abstractions.impl.MiddlewareTypes;
 import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.FullSentNotification;
+import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.NewNotificationRequest;
 import it.pagopa.pn.delivery.middleware.notificationdao.entities.*;
+import it.pagopa.pn.delivery.models.NotificationCost;
 import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -14,7 +16,9 @@ import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import software.amazon.awssdk.enhanced.dynamodb.Key;
 
+import java.time.Instant;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 @ExtendWith(SpringExtension.class)
@@ -24,6 +28,7 @@ import java.util.Optional;
         "aws.profile-name=${PN_AWS_PROFILE_NAME:default}",
         "aws.endpoint-url=http://localhost:4566",
         "pn.delivery.notification-dao.table-name=Notifications",
+        "pn.delivery.notification-cost-dao.table-name=NotificationsCost",
         "pn.delivery.notification-metadata-dao.table-name=NotificationsMetadata"
     })
 @SpringBootTest
@@ -31,6 +36,9 @@ class NotificationEntityDaoDynamoTestIT {
 
     @Autowired
     private NotificationEntityDao notificationEntityDao;
+
+    @Autowired
+    private NotificationCostEntityDao notificationCostEntityDao;
 
     @Test
     void putSuccess() throws IdConflictException {
@@ -45,9 +53,17 @@ class NotificationEntityDaoDynamoTestIT {
         Key controlKey = Key.builder()
                 .partitionValue( controlIun )
                 .build();
+        Key costKey1 = Key.builder()
+                .partitionValue( "creditorTaxId##noticeCode" )
+                .build();
+        Key costKey2 = Key.builder()
+                .partitionValue( "77777777777##002720356512737953" )
+                .build();
 
         removeItemFromDb( key );
         removeItemFromDb( controlKey );
+        removeFromNotificationCostDb( costKey1 );
+        removeFromNotificationCostDb( costKey2 );
 
         //When
         notificationEntityDao.putIfAbsent( notificationToInsert );
@@ -63,6 +79,14 @@ class NotificationEntityDaoDynamoTestIT {
 
     }
 
+    @Test
+    void getNotificationByPayment() {
+        Optional<NotificationCost> result = notificationCostEntityDao.getNotificationByPaymentInfo( "creditorTaxId", "noticeCode" );
+
+        Assertions.assertNotNull( result );
+        Assertions.assertEquals( "IUN_01" , result.get().getIun() );
+    }
+
     @NotNull
     private String getControlIun(NotificationEntity notificationToInsert) {
         return notificationToInsert.getSenderPaId()
@@ -74,6 +98,7 @@ class NotificationEntityDaoDynamoTestIT {
     private NotificationEntity newNotification() {
         return NotificationEntity.builder()
                 .iun("IUN_01")
+                ._abstract( "Abstract" )
                 .paNotificationId("protocol_01")
                 .subject("Subject 01")
                 .physicalCommunicationType(FullSentNotification.PhysicalCommunicationTypeEnum.REGISTERED_LETTER_890)
@@ -81,9 +106,11 @@ class NotificationEntityDaoDynamoTestIT {
                 .cancelledIun("IUN_00")
                 .senderPaId( "pa_02" )
                 .group( "Group_1" )
-                .recipients( Collections.singletonList(NotificationRecipientEntity.builder()
+                .sentAt( Instant.now() )
+                .notificationFeePolicy( NewNotificationRequest.NotificationFeePolicyEnum.FLAT_RATE )
+                .recipients( List.of(NotificationRecipientEntity.builder()
                                 .recipientType( RecipientTypeEntity.PF )
-                                .taxId( "recipientTaxId" )
+                                .recipientId( "recipientTaxId" )
                                 .digitalDomicile(NotificationDigitalAddressEntity.builder()
                                         .address( "address@pec.it" )
                                         .type( DigitalAddressTypeEntity.PEC )
@@ -103,12 +130,41 @@ class NotificationEntityDaoDynamoTestIT {
                                                         .build() )
                                                 .build() )
                                         .build() )
-                        .build()) )
+                                        .physicalAddress( NotificationPhysicalAddressEntity.builder()
+                                                .address( "address" )
+                                                .addressDetails( "addressDetail" )
+                                                .zip( "zip" )
+                                                .at( "at" )
+                                                .municipality( "municipality" )
+                                                .province( "province" )
+                                                .municipalityDetails( "municipalityDetails" )
+                                                .build() )
+                        .build(),
+                        NotificationRecipientEntity.builder()
+                                .payment( NotificationPaymentInfoEntity.builder()
+                                        .creditorTaxId( "77777777777" )
+                                        .noticeCode( "002720356512737953" )
+                                        .build() )
+                                .physicalAddress( NotificationPhysicalAddressEntity.builder()
+                                        .foreignState( "Svizzera" )
+                                        .address( "via canton ticino" )
+                                        .at( "presso" )
+                                        .addressDetails( "19" )
+                                        .municipality( "cCantonticino" )
+                                        .province( "cantoni" )
+                                        .zip( "00100" )
+                                        .municipalityDetails( "frazione1" )
+                                        .build() )
+                                .build()) )
                 //.recipientsJson(Collections.emptyMap())
                 .build();
     }
 
     private void removeItemFromDb(Key key) {
         notificationEntityDao.delete( key );
+    }
+
+    private void removeFromNotificationCostDb( Key key ){
+        notificationCostEntityDao.delete( key );
     }
 }
